feat: discord avatars
